fixing navbar to stretch correctly

--- a/assets/css/tapangi.css
+++ b/assets/css/tapangi.css
@@ -1337,7 +1337,7 @@ form li.complex p.error {
 
 @media (max-width: 979px) {
   .navbar .navbar-inner .container {
-    width: 740px; }
+    width: 760px; }
   .navbar .navbar-inner .nav > li > a {
     padding-left: 15px;
     padding-right: 15px; }
