--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -2,7 +2,7 @@
   .navbar {
     .navbar-inner {
       .container {
-        width: 740px;
+        width: 760px;
       }
       .nav {
         > li {
